fix: maskToken 改用 Math.clamp 修复 SonarCloud S6885 (#170)
- java:S6885：用 Java 21 Math.clamp 替代 Math.min/Math.max 组合裁剪
- 行为完全等价：clamp(v,min,max) = max(min, min(v,max))
- 修复 PR #170 合并后在 SonarCloud 上报告的两个 issue

Co-authored-by: BeeAgent <BeeAgent@acanx.com>